[package]
name = "near-pds"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "near-pds"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
k256 = { version = "0.13.1", features = ["ecdsa"] }
sha3 = "0.10.8"
alloy = "1.1.2"
bip32 = "0.5.1"
bytes = "1.11.0"
minicbor = "2.1.3"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
